--- a/index.html
+++ b/index.html
@@ -31,16 +31,18 @@
 
           <ul class="nav-menu" id="navMenu">
             <li><a href="#home">Home</a></li>
+            <li><a href="#tech">Tech Stack</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#experience">Experience</a></li>
             <li><a href="#testimoni">Testimoni</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </div>
       </nav>
     </header>
 
     <main>
-      <section class="hero">
+      <section class="hero" id="home">
         <div class="container">
           <div class="profile">
             <div class="image">
@@ -96,7 +98,7 @@
       </section>
 
       <!-- TECH STACK -->
-      <section class="tech">
+      <section class="tech" id="tech">
         <div class="container">
           <p id="title-section">Tech Stack</p>
           <h2>Tech Stack yang Biasa Digunakan</h2>
