[UPDATE] hero & nav

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container">
           <div class="profile">
             <div class="image">
-              <img src="./img/profile.webp" alt="Foto profile" />
+              <img src="./img/profile.png" alt="Foto profile" />
             </div>
 
             <div class="profile-text">
