--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio</title>
+    <meta
+      name="description"
+      content="Portfolio website Damar Adi Nugroho, Web Developer berfokus pada pengembangan website yang menarik dan fungsional. menggunakan framework modern. "
+    />
+    <title>Damar Adi Nugroho | Web Developer Portfolio</title>
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/mobile.css" />
 
@@ -53,9 +57,11 @@
               <h1>Halo, saya <span>Damar Adi Nugroho</span></h1>
               <h2>Web Developer</h2>
               <p>
-                Saya membuat pengalaman digital yang menarik dan fungsional
-                melalui pengembangan front-end. Dengan menggunakan HTML, CSS,
-                JavaScript, dan framework modern.
+                Saya Adalah seorang web developer yang berfokus pada
+                pengembangan website yang menarik dan fungsional. Dengan
+                menggunakan berbagai teknologi dan framework modern, saya
+                menciptakan solusi digital yang efektif untuk memenuhi kebutuhan
+                klien saya.
               </p>
 
               <div class="cta">
@@ -100,8 +106,8 @@
       <!-- TECH STACK -->
       <section class="tech" id="tech">
         <div class="container">
-          <p id="title-section">Tech Stack</p>
-          <h2>Tech Stack yang Biasa Digunakan</h2>
+          <h2 id="title-section">Tech Stack</h2>
+          <h3>Tech Stack yang Biasa Digunakan</h3>
           <p class="desc-title">
             Saya adalah seorang web developer yang memiliki pengalaman dalam
             mengembangkan aplikasi web menggunakan HTML, CSS, dan JavaScript.
@@ -148,6 +154,7 @@
                     <img
                       style="width: 40px; height: 40px"
                       src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vitejs/vitejs-original.svg"
+                      alt="React Vite Logo"
                     />
                     <p>Vite</p>
                   </div>
@@ -165,6 +172,7 @@
                     <img
                       style="width: 40px; height: 40px"
                       src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original.svg"
+                      alt="Bootstrap Logo"
                     />
                     <p>Bootstrap</p>
                   </div>
@@ -189,6 +197,7 @@
                     <img
                       style="width: 40px; height: 40px"
                       src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/gitlab/gitlab-original.svg"
+                      alt="GitLab Logo"
                     />
 
                     <p>GitLab</p>
@@ -197,6 +206,7 @@
                     <img
                       style="width: 40px; height: 40px"
                       src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/figma/figma-original.svg"
+                      alt="Figma Logo"
                     />
                     <p>Figma</p>
                   </div>
@@ -211,8 +221,8 @@
       <!-- PORTFOLIO -->
       <section class="portfolio" id="portfolio">
         <div class="container">
-          <p id="title-section">Portfolio</p>
-          <h2>Merancang Solusi yang Memberi Nilai</h2>
+          <h2 id="title-section">Portfolio</h2>
+          <h3>Merancang Solusi yang Memberi Nilai</h3>
 
           <p class="desc-title">
             Setiap proyek dikembangkan dengan pendekatan yang terarah,
@@ -224,7 +234,7 @@
           <div class="card">
             <div class="card-box">
               <div class="card-item">
-                <img src="./img/washprog.webp" alt="porto1" />
+                <img src="./img/washprog.webp" alt="portfolio WashProg" />
               </div>
               <div class="card-title">
                 <h3>Cuci Sepatu WashProg</h3>
@@ -241,7 +251,7 @@
 
             <div class="card-box">
               <div class="card-item">
-                <img src="./img/task.webp" alt="porto1" />
+                <img src="./img/task.webp" alt="Portfolio Voca Task" />
               </div>
               <div class="card-title">
                 <h3>Voca Task</h3>
@@ -258,7 +268,7 @@
 
             <div class="card-box">
               <div class="card-item">
-                <img src="./img/bersihinaja.webp" alt="porto1" />
+                <img src="./img/bersihinaja.webp" alt="Portfolio BersihinAja" />
               </div>
               <div class="card-title">
                 <h3>BersihinAja</h3>
@@ -279,8 +289,8 @@
       <!-- EXPERIENCE -->
       <section class="experience" id="experience">
         <div class="container">
-          <p id="title-section">My Experience</p>
-          <h2>Pengalaman Saya dalam pengembangan Website</h2>
+          <h2 id="title-section">My Experience</h2>
+          <h3>Pengalaman Saya dalam pengembangan Website</h3>
           <p class="desc-title">
             Setiap proyek dikembangkan dengan pendekatan yang terarah,
             menggabungkan pemikiran strategis, kreativitas, dan pengembangan
@@ -291,7 +301,7 @@
             <div class="experience-list">
               <div class="experience-item">
                 <div class="experience-dot"></div>
-                <h3 class="experience-title">Internship Web Developer</h3>
+                <h4 class="experience-title">Internship Web Developer</h4>
                 <div class="experience-card">
                   <div class="experience-header">
                     <div class="experience-loc">
@@ -314,10 +324,10 @@
             <div class="experience-list">
               <div class="experience-item">
                 <div class="experience-dot"></div>
-                <h3 class="experience-title">
+                <h4 class="experience-title">
                   Asisten <br />
                   Praktikum
-                </h3>
+                </h4>
                 <div class="experience-card">
                   <div class="experience-header">
                     <div class="experience-loc">
@@ -342,10 +352,10 @@
             <div class="experience-list">
               <div class="experience-item">
                 <div class="experience-dot"></div>
-                <h3 class="experience-title">
+                <h4 class="experience-title">
                   Studi <br />
                   Independent
-                </h3>
+                </h4>
                 <div class="experience-card">
                   <div class="experience-header">
                     <div>
@@ -375,8 +385,8 @@
       <!--- TESTIMONI -->
       <section class="testimoni" id="testimoni">
         <div class="container testimoni">
-          <p id="title-section">Testimonial</p>
-          <h2>Pengalaman Pelanggan</h2>
+          <h2 id="title-section">Testimonial</h2>
+          <h3>Pengalaman Pelanggan</h3>
           <p class="desc-title">
             Berikut adalah beberapa testimoni dari pelanggan yang telah bekerja
             sama dengan saya dan memberikan pengalaman positif terhadap hasil
@@ -385,7 +395,7 @@
           <div class="testimonial-grid">
             <div class="testimonial-slides">
               <div class="testimonial-box">
-                <h3 class="testimonial-title">Yandi Novia</h3>
+                <h4 class="testimonial-title">Yandi Novia</h4>
                 <div class="testimonial-rating">★★★★★</div>
                 <p class="testimonial-content">
                   Desain webnya sangat menarik dan fungsional. Damar benar-benar
@@ -393,7 +403,7 @@
                 </p>
               </div>
               <div class="testimonial-box">
-                <h3 class="testimonial-title">Dani</h3>
+                <h4 class="testimonial-title">Dani</h4>
                 <div class="testimonial-rating">★★★★</div>
                 <p class="testimonial-content">
                   Damar sangat profesional dan komunikatif selama proses
@@ -401,7 +411,7 @@
                 </p>
               </div>
               <div class="testimonial-box">
-                <h3 class="testimonial-title">Doni Putra</h3>
+                <h4 class="testimonial-title">Doni Putra</h4>
                 <div class="testimonial-rating">★★★★★</div>
                 <p class="testimonial-content">
                   Saya sangat puas dengan layanan yang diberikan oleh Damar.
@@ -410,7 +420,7 @@
                 </p>
               </div>
               <div class="testimonial-box">
-                <h3 class="testimonial-title">Murad</h3>
+                <h4 class="testimonial-title">Murad</h4>
                 <div class="testimonial-rating">★★★★★</div>
                 <p class="testimonial-content">
                   Damar adalah seorang web developer yang sangat berbakat.
@@ -419,7 +429,7 @@
                 </p>
               </div>
               <div class="testimonial-box">
-                <h3 class="testimonial-title">Nadya</h3>
+                <h4 class="testimonial-title">Nadya</h4>
                 <div class="testimonial-rating">★★★★★</div>
                 <p class="testimonial-content">
                   Saya merekomendasikan Damar kepada siapa pun yang mencari web
@@ -438,8 +448,8 @@
       <!---- CONTACT ---->
       <section class="contacts" id="contact">
         <div class="container">
-          <p id="title-section">Kontak</p>
-          <h2>Hubungi Saya</h2>
+          <h2 id="title-section">Kontak</h2>
+          <h3>Hubungi Saya</h3>
           <p class="desc-title">
             Jika Anda memiliki pertanyaan atau ingin bekerja sama, silakan
             hubungi saya melalui form berikut.
